fix(navbar): adjust navbar layout and styling for improved alignment and responsiveness

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,8 +5,8 @@
 }
 
 .navbar {
+  position: relative;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: 1rem;
   background-color: rgb(34, 34, 34);
@@ -15,11 +15,27 @@
 .navbar h1 {
   color: white;
   font-size: 2rem;
+  z-index: 1;
 }
 
 .navbar-list {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   list-style: none;
   gap: 1rem;
-  margin: 0 auto;
+}
+
+.navbar-list li a {
+  color: white;
+  text-decoration: none;
+}
+
+.navbar-list li a:hover {
+  color: rgb(161, 0, 0);
+  text-decoration: none;
+  transition: 0.2s all ease-in-out;
+  border-bottom: 1px solid rgb(161, 0, 0);
+  padding-bottom: 0.2rem;
 }
